# cognigy-api-client

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  codecov.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/: __init__.py  async_client.py  client.py  exceptions.py  pagination.py  validation.py
src/models/: __init__.py  aiagent.py  analytics.py  base.py  connection.py  conversation.py  extension.py  flow.py  function.py  knowledge_chunk.py  knowledge_connector.py  knowledge_source.py  knowledge_store.py  llm.py  locale.py  log.py  node.py  project.py  search.py  snapshot.py  task.py
src/resources/: __init__.py  aiagents.py  analytics.py  connections.py  conversations.py  extensions.py  flows.py  functions.py  knowledge_chunks.py  knowledge_connectors.py  knowledge_sources.py  knowledge_stores.py  llm.py  locales.py  logs.py  nodes.py  projects.py  search.py  snapshots.py  tasks.py
tests/: conftest.py  test_async_client.py  test_client.py  test_exceptions.py  test_models.py  test_pagination.py  test_resources_aiagents.py  test_resources_flows.py  test_resources_knowledge_stores.py  test_resources_projects.py  test_resources_search.py  test_validation.py
