[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cognigy-api-client"
version = "0.1.0"
description = "Unofficial, community-maintained Python SDK for the Cognigy.AI REST API"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  {name = "TheHenkelmann"}
]
keywords = ["cognigy", "cognigy.ai", "api", "sdk", "rest", "unofficial"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.24.0",
    "json5>=0.9.0",
    "pydantic>=2.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/TheHenkelmann/cognigy-api-client"
Repository = "https://github.com/TheHenkelmann/cognigy-api-client"
Issues = "https://github.com/TheHenkelmann/cognigy-api-client/issues"
Documentation = "https://github.com/TheHenkelmann/cognigy-api-client#readme"

[tool.setuptools]
packages = ["cognigy", "cognigy.models", "cognigy.resources"]

[tool.setuptools.package-dir]
cognigy = "src"

[tool.setuptools.package-data]
cognigy = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source = ["cognigy"]
