[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cognigy-api-client"
version = "0.1.1"
description = "Strictly typed, unofficial Python SDK for the Cognigy.AI REST API — sync/async clients, Pydantic v2, and full resource coverage."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  {name = "TheHenkelmann"}
]
keywords = ["cognigy", "cognigy.ai", "api", "sdk", "rest", "unofficial"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.24.0",
    "json5>=0.9.0",
    "pydantic>=2.0.0",
    "eval_type_backport>=0.2.0; python_version<'3.10'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
    "pre-commit>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/TheHenkelmann/cognigy-api-client"
Repository = "https://github.com/TheHenkelmann/cognigy-api-client"
Issues = "https://github.com/TheHenkelmann/cognigy-api-client/issues"
Documentation = "https://github.com/TheHenkelmann/cognigy-api-client#readme"
Changelog = "https://github.com/TheHenkelmann/cognigy-api-client/blob/master/CHANGELOG.md"

[tool.setuptools]
packages = ["cognigy", "cognigy.models", "cognigy.resources"]

[tool.setuptools.package-dir]
cognigy = "src"

[tool.setuptools.package-data]
cognigy = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source = ["cognigy"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 55

[tool.ruff]
target-version = "py39"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
    "SIM",
]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.ruff.lint.isort]
known-first-party = ["cognigy"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
plugins = ["pydantic.mypy"]
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true
no_implicit_optional = true
strict_optional = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_decorators = false
warn_no_return = true
warn_unreachable = true
namespace_packages = true
explicit_package_bases = true
mypy_path = "src"
packages = ["cognigy"]
